--- a/src/templates/_settings.twig
+++ b/src/templates/_settings.twig
@@ -9,7 +9,9 @@
 
 <h2>Step 1</h2>
 
-<p>First you need to create a Facebook App. You can do this by visiting the <a href="https://developers.facebook.com/apps/">Facebook Developers</a> page.</p>
+<p>First you need to create an Instagram App. You can do this by visiting the <a href="https://developers.facebook.com/apps/">Facebook Developers</a> page. When creating the app select use case 'Other', then 'Comsumer'. and then you will be able to Set Up the <strong>Instagram Basic Display</strong>.</p>
+
+<p>Add your instagram account to <span style="background:#eee;padding:8px;border-radius:5px;">App Roles -> Roles</span> on your Instagram App settings.</p>
 
 <p><strong>Note:</strong> You can find your <strong>App ID</strong>, <strong>App Secret</strong> and <strong>Valid OAuth Redirect URIs</strong> at: <span style="background:#eee;padding:8px;border-radius:5px;">Facebook Developers -> App Settings -> Products -> Instagram Basic Display -> Basic Display</span></p>
 
@@ -118,7 +120,7 @@
   {% else %}
     <p>After saving your Instagram App ID and Secret, you need to authenticate with Instagram to get an access token. Click the button below to start the authorization flow with Instagram.</p>
 
-    <a href="{{ plugin.getAuthUrl() }}" class="btn">Authenticate with Instagram</a>
+    <a href="{{ plugin.getAuthUrl() }}" class="btn" target="_self">Authenticate with Instagram</a>
   {% endif %}
 {% endif %}
 
